[package]
name = "sock2proc"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
tracing = "0.1"
byteorder = "1.5"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.14"
netlink-packet-sock-diag = "0.4.2"
netlink-packet-core = "0.7.0"
netlink-sys = "0.8.6"

[target.'cfg(target_os = "macos")'.dependencies]
sysctl = "0.5.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_System_Threading", "Win32_Networking_WinSock"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench_find_process_by_socket"
harness = false